laurel_sprout: gps: Decrease log level to 2
* Kill logcat spam

Signed-off-by: Hemant Sachdeva <hemant.evolver@gmail.com>

--- a/gps/etc/gps.conf
+++ b/gps/etc/gps.conf
@@ -12,7 +12,7 @@ XTRA_CA_PATH=/usr/lib/ssl-1.1/certs
 # DEBUG LEVELS: 0 - none, 1 - Error, 2 - Warning, 3 - Info
 #               4 - Debug, 5 - Verbose
 # If DEBUG_LEVEL is commented, Android's logging levels will be used
-DEBUG_LEVEL = 3
+DEBUG_LEVEL = 2
 
 # Intermediate position report, 1=enable, 0=disable
 INTERMEDIATE_POS=0
@@ -290,7 +290,7 @@ MODEM_TYPE = 1
 # 1 : enabled
 # This setting enables GPS engine to estimate clock
 # bias and drift when the signal from at least 1
-# SV is available and the UE’s position is known by
+# SV is available and the UEï¿½s position is known by
 # other position engines.
 #POSITION_ASSISTED_CLOCK_ESTIMATOR_ENABLED = 0
 
